Update styles in index.html for improved UI and change server address to listen on all interfaces

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,9 @@
   <title>Arx Game</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
   <style>
+    html {
+      background-color: #000000;
+    }
     .board {
       border-collapse: collapse;
     }
@@ -23,11 +26,11 @@
     }
     .board tr:nth-child(odd) td:nth-child(even),
     .board tr:nth-child(even) td:nth-child(odd) {
-      background-color: #f0d9b5;
+      background-color: #d9c598;
     }
     .board tr:nth-child(even) td:nth-child(even),
     .board tr:nth-child(odd) td:nth-child(odd) {
-      background-color: #b58863;
+      background-color: #8d572c;
     }
     .selected {
       background-color: #6495ED !important; /* Cornflower blue */
