--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,9 @@
     .possible-move {
       background-color: #55d157 !important; /* Light green */
     }
+    .hovered-move {
+      background-color: #e1ca58 !important; /* Soft yellow for hovered moves */
+    }
     .white-piece {
         color: white;
         text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
