--- a/public/index.html
+++ b/public/index.html
@@ -75,6 +75,7 @@
           <div id="board-container"></div>
           <div id="status">Loading...</div>
           <div class="buttons mt-4">
+            <a href="/" class="button is-warning">Reset board</a>
             <button class="button is-primary" id="switch-sides-btn">Switch Sides</button>
             <button class="button is-info" id="ask-engine-btn">Ask Engine</button>
           </div>
